# conan-workspace-test

./: .gitignore  .gitmodules  README.md  activate  conanws.py  conanws.yml  setup.sh
app/: CMakeLists.txt  conanfile.py
app/src/: app.cpp.in  app.h  main.cpp
example_scripts/: version_mismatch.sh
liba/: CMakeLists.txt  conanfile.py
liba/include/: liba.h
liba/src/: liba.cpp.in
libb/: CMakeLists.txt  conanfile.py
libb/include/: libb.h
libb/src/: libb.cpp.in
